src/usql/parser/antlr4/SQL92Parser.cpp

// Generated from SQL92.g4 by ANTLR 4.7.1


#include "SQL92Listener.h"

#include "SQL92Parser.h"


using namespace antlrcpp;
using namespace uSQL::ANTLR4;
using namespace antlr4;

SQL92Parser::SQL92Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SQL92Parser::~SQL92Parser() {
  delete _interpreter;
}

std::string SQL92Parser::getGrammarFileName() const {
  return "SQL92.g4";
}

const std::vector<std::string>& SQL92Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SQL92Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- QueriesContext ------------------------------------------------------------------

SQL92Parser::QueriesContext::QueriesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SQL92Parser::StatementContext *> SQL92Parser::QueriesContext::statement() {
  return getRuleContexts<SQL92Parser::StatementContext>();
}

SQL92Parser::StatementContext* SQL92Parser::QueriesContext::statement(size_t i) {
  return getRuleContext<SQL92Parser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> SQL92Parser::QueriesContext::SEMICOLON() {
  return getTokens(SQL92Parser::SEMICOLON);
}

tree::TerminalNode* SQL92Parser::QueriesContext::SEMICOLON(size_t i) {
  return getToken(SQL92Parser::SEMICOLON, i);
}


size_t SQL92Parser::QueriesContext::getRuleIndex() const {
  return SQL92Parser::RuleQueries;
}

void SQL92Parser::QueriesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueries(this);
}

void SQL92Parser::QueriesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueries(this);
}

SQL92Parser::QueriesContext* SQL92Parser::queries() {
  QueriesContext *_localctx = _tracker.createInstance<QueriesContext>(_ctx, getState());
  enterRule(_localctx, 0, SQL92Parser::RuleQueries);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    statement();
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SQL92Parser::SEMICOLON) {
      setState(123);
      match(SQL92Parser::SEMICOLON);
      setState(124);
      statement();
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SQL92Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQL92Parser::Show_stmtContext* SQL92Parser::StatementContext::show_stmt() {
  return getRuleContext<SQL92Parser::Show_stmtContext>(0);
}

SQL92Parser::Use_stmtContext* SQL92Parser::StatementContext::use_stmt() {
  return getRuleContext<SQL92Parser::Use_stmtContext>(0);
}

SQL92Parser::Create_collection_stmtContext* SQL92Parser::StatementContext::create_collection_stmt() {
  return getRuleContext<SQL92Parser::Create_collection_stmtContext>(0);
}

SQL92Parser::Create_index_stmtContext* SQL92Parser::StatementContext::create_index_stmt() {
  return getRuleContext<SQL92Parser::Create_index_stmtContext>(0);
}

SQL92Parser::Drop_collection_stmtContext* SQL92Parser::StatementContext::drop_collection_stmt() {
  return getRuleContext<SQL92Parser::Drop_collection_stmtContext>(0);
}

SQL92Parser::Drop_index_stmtContext* SQL92Parser::StatementContext::drop_index_stmt() {
  return getRuleContext<SQL92Parser::Drop_index_stmtContext>(0);
}

SQL92Parser::Select_stmtContext* SQL92Parser::StatementContext::select_stmt() {
  return getRuleContext<SQL92Parser::Select_stmtContext>(0);
}

SQL92Parser::Insert_stmtContext* SQL92Parser::StatementContext::insert_stmt() {
  return getRuleContext<SQL92Parser::Insert_stmtContext>(0);
}

SQL92Parser::Update_stmtContext* SQL92Parser::StatementContext::update_stmt() {
  return getRuleContext<SQL92Parser::Update_stmtContext>(0);
}

SQL92Parser::Delete_stmtContext* SQL92Parser::StatementContext::delete_stmt() {
  return getRuleContext<SQL92Parser::Delete_stmtContext>(0);
}


size_t SQL92Parser::StatementContext::getRuleIndex() const {
  return SQL92Parser::RuleStatement;
}

void SQL92Parser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void SQL92Parser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

SQL92Parser::StatementContext* SQL92Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SQL92Parser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(130);
      show_stmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(131);
      use_stmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(132);
      create_collection_stmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(133);
      create_index_stmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(134);
      drop_collection_stmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(135);
      drop_index_stmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(136);
      select_stmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(137);
      insert_stmt();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(138);
      update_stmt();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(139);
      delete_stmt();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Show_stmtContext ------------------------------------------------------------------

SQL92Parser::Show_stmtContext::Show_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Show_stmtContext::SHOW() {
  return getToken(SQL92Parser::SHOW, 0);
}

SQL92Parser::Collection_sectionContext* SQL92Parser::Show_stmtContext::collection_section() {
  return getRuleContext<SQL92Parser::Collection_sectionContext>(0);
}


size_t SQL92Parser::Show_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleShow_stmt;
}

void SQL92Parser::Show_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShow_stmt(this);
}

void SQL92Parser::Show_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShow_stmt(this);
}

SQL92Parser::Show_stmtContext* SQL92Parser::show_stmt() {
  Show_stmtContext *_localctx = _tracker.createInstance<Show_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, SQL92Parser::RuleShow_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(SQL92Parser::SHOW);
    setState(143);
    collection_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Use_stmtContext ------------------------------------------------------------------

SQL92Parser::Use_stmtContext::Use_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Use_stmtContext::USE() {
  return getToken(SQL92Parser::USE, 0);
}

SQL92Parser::Collection_sectionContext* SQL92Parser::Use_stmtContext::collection_section() {
  return getRuleContext<SQL92Parser::Collection_sectionContext>(0);
}


size_t SQL92Parser::Use_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleUse_stmt;
}

void SQL92Parser::Use_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUse_stmt(this);
}

void SQL92Parser::Use_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUse_stmt(this);
}

SQL92Parser::Use_stmtContext* SQL92Parser::use_stmt() {
  Use_stmtContext *_localctx = _tracker.createInstance<Use_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, SQL92Parser::RuleUse_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(SQL92Parser::USE);
    setState(146);
    collection_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Create_collection_stmtContext ------------------------------------------------------------------

SQL92Parser::Create_collection_stmtContext::Create_collection_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Create_collection_stmtContext::CREATE() {
  return getToken(SQL92Parser::CREATE, 0);
}

tree::TerminalNode* SQL92Parser::Create_collection_stmtContext::COLLECTION() {
  return getToken(SQL92Parser::COLLECTION, 0);
}

SQL92Parser::Collection_sectionContext* SQL92Parser::Create_collection_stmtContext::collection_section() {
  return getRuleContext<SQL92Parser::Collection_sectionContext>(0);
}

tree::TerminalNode* SQL92Parser::Create_collection_stmtContext::OPTIONS() {
  return getToken(SQL92Parser::OPTIONS, 0);
}

SQL92Parser::ExpressionContext* SQL92Parser::Create_collection_stmtContext::expression() {
  return getRuleContext<SQL92Parser::ExpressionContext>(0);
}


size_t SQL92Parser::Create_collection_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleCreate_collection_stmt;
}

void SQL92Parser::Create_collection_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate_collection_stmt(this);
}

void SQL92Parser::Create_collection_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate_collection_stmt(this);
}

SQL92Parser::Create_collection_stmtContext* SQL92Parser::create_collection_stmt() {
  Create_collection_stmtContext *_localctx = _tracker.createInstance<Create_collection_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, SQL92Parser::RuleCreate_collection_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(SQL92Parser::CREATE);
    setState(149);
    match(SQL92Parser::COLLECTION);
    setState(150);
    collection_section();
    setState(153);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQL92Parser::OPTIONS) {
      setState(151);
      match(SQL92Parser::OPTIONS);
      setState(152);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Drop_collection_stmtContext ------------------------------------------------------------------

SQL92Parser::Drop_collection_stmtContext::Drop_collection_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Drop_collection_stmtContext::DROP() {
  return getToken(SQL92Parser::DROP, 0);
}

tree::TerminalNode* SQL92Parser::Drop_collection_stmtContext::COLLECTION() {
  return getToken(SQL92Parser::COLLECTION, 0);
}

SQL92Parser::Collection_sectionContext* SQL92Parser::Drop_collection_stmtContext::collection_section() {
  return getRuleContext<SQL92Parser::Collection_sectionContext>(0);
}


size_t SQL92Parser::Drop_collection_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleDrop_collection_stmt;
}

void SQL92Parser::Drop_collection_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_collection_stmt(this);
}

void SQL92Parser::Drop_collection_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_collection_stmt(this);
}

SQL92Parser::Drop_collection_stmtContext* SQL92Parser::drop_collection_stmt() {
  Drop_collection_stmtContext *_localctx = _tracker.createInstance<Drop_collection_stmtContext>(_ctx, getState());
  enterRule(_localctx, 10, SQL92Parser::RuleDrop_collection_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    match(SQL92Parser::DROP);
    setState(156);
    match(SQL92Parser::COLLECTION);
    setState(157);
    collection_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Create_index_stmtContext ------------------------------------------------------------------

SQL92Parser::Create_index_stmtContext::Create_index_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Create_index_stmtContext::CREATE() {
  return getToken(SQL92Parser::CREATE, 0);
}

tree::TerminalNode* SQL92Parser::Create_index_stmtContext::COLLECTION_INDEX() {
  return getToken(SQL92Parser::COLLECTION_INDEX, 0);
}

SQL92Parser::Index_sectionContext* SQL92Parser::Create_index_stmtContext::index_section() {
  return getRuleContext<SQL92Parser::Index_sectionContext>(0);
}


size_t SQL92Parser::Create_index_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleCreate_index_stmt;
}

void SQL92Parser::Create_index_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate_index_stmt(this);
}

void SQL92Parser::Create_index_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate_index_stmt(this);
}

SQL92Parser::Create_index_stmtContext* SQL92Parser::create_index_stmt() {
  Create_index_stmtContext *_localctx = _tracker.createInstance<Create_index_stmtContext>(_ctx, getState());
  enterRule(_localctx, 12, SQL92Parser::RuleCreate_index_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    match(SQL92Parser::CREATE);
    setState(160);
    match(SQL92Parser::COLLECTION_INDEX);
    setState(161);
    index_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Drop_index_stmtContext ------------------------------------------------------------------

SQL92Parser::Drop_index_stmtContext::Drop_index_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Drop_index_stmtContext::DROP() {
  return getToken(SQL92Parser::DROP, 0);
}

tree::TerminalNode* SQL92Parser::Drop_index_stmtContext::COLLECTION_INDEX() {
  return getToken(SQL92Parser::COLLECTION_INDEX, 0);
}

SQL92Parser::Index_sectionContext* SQL92Parser::Drop_index_stmtContext::index_section() {
  return getRuleContext<SQL92Parser::Index_sectionContext>(0);
}


size_t SQL92Parser::Drop_index_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleDrop_index_stmt;
}

void SQL92Parser::Drop_index_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_index_stmt(this);
}

void SQL92Parser::Drop_index_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_index_stmt(this);
}

SQL92Parser::Drop_index_stmtContext* SQL92Parser::drop_index_stmt() {
  Drop_index_stmtContext *_localctx = _tracker.createInstance<Drop_index_stmtContext>(_ctx, getState());
  enterRule(_localctx, 14, SQL92Parser::RuleDrop_index_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(163);
    match(SQL92Parser::DROP);
    setState(164);
    match(SQL92Parser::COLLECTION_INDEX);
    setState(165);
    index_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_stmtContext ------------------------------------------------------------------

SQL92Parser::Select_stmtContext::Select_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQL92Parser::Select_coreContext* SQL92Parser::Select_stmtContext::select_core() {
  return getRuleContext<SQL92Parser::Select_coreContext>(0);
}

SQL92Parser::Sorting_sectionContext* SQL92Parser::Select_stmtContext::sorting_section() {
  return getRuleContext<SQL92Parser::Sorting_sectionContext>(0);
}

SQL92Parser::Limit_sectionContext* SQL92Parser::Select_stmtContext::limit_section() {
  return getRuleContext<SQL92Parser::Limit_sectionContext>(0);
}

SQL92Parser::Offset_sectionContext* SQL92Parser::Select_stmtContext::offset_section() {
  return getRuleContext<SQL92Parser::Offset_sectionContext>(0);
}


size_t SQL92Parser::Select_stmtContext::getRuleIndex() const {
  return SQL92Parser::RuleSelect_stmt;
}

void SQL92Parser::Select_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelect_stmt(this);
}

void SQL92Parser::Select_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQL92Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelect_stmt(this);
}

SQL92Parser::Select_stmtContext* SQL92Parser::select_stmt() {
  Select_stmtContext *_localctx = _tracker.createInstance<Select_stmtContext>(_ctx, getState());
  enterRule(_localctx, 16, SQL92Parser::RuleSelect_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    select_core();
    setState(169);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQL92Parser::ORDER) {
      setState(168);
      sorting_section();
    }
    setState(172);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQL92Parser::LIMIT) {
      setState(171);
      limit_section();
    }
    setState(175);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQL92Parser::OFFSET) {
      setState(174);
      offset_section();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_coreContext ------------------------------------------------------------------

SQL92Parser::Select_coreContext::Select_coreContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQL92Parser::Select_coreContext::SELECT() {
  return getToken(SQL92Parser::SELECT, 0);
}

SQL92Parser::From_sectionContext* SQL92Parser::Select_coreContext::from_section() {
  return getRuleContext<SQL92Parser::From_sectionContext>(0);
}

tree::TerminalNode* SQL92Parser::Select_coreContext::DISTINCT() {
  return getToken(SQL92Parser::DISTINCT, 0);
}

tree::TerminalNode* SQL92Parser::Select_coreContext::ALL() {
  return getToken(SQL92Parser::ALL, 0);
}

SQL92Parser::Result_column_sectionContext* SQL92Parser::Select_coreContext::result_column_section() {
  return getRuleContext<SQL92Parser::Result_column_sectionContext>(0);
}

SQL92Parser::Where_sectionContext* SQL92Parser::Select_coreContext::where_section() {
  return getRuleContext<SQL92Parser::Where_sectionContext>(0);
}

SQL92Parser::Grouping_sectionContext* SQL92Parser::Select_coreContext::grouping_section() {
  return getRuleContext<SQL92Parser::Grouping_sectionContext>(0);
}

SQL92Parser::Having_sectionContext* SQL92Parser::Select_coreContext::having_section() {
  return getRuleContext<SQL92Parser::Having_sectionContext>(0);
}

